updated environment for linux and 30 min cadence models

--- a/notebooks/create-comets.ipynb
+++ b/notebooks/create-comets.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "id": "70240a3f-bff6-4946-ac16-4a0709b2ae33",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
-    "sys.path.insert(1, '/Users/azib/Documents/open_source/nets2/stella/')\n",
-    "sys.path.insert(1, '/Users/azib/Documents/open_source/nets2/scripts/')\n",
+    "sys.path.insert(1, '/home/astro/phrdhx/nets2/stella/')\n",
+    "sys.path.insert(1, '/home/astro/phrdhx/nets2/scripts')\n",
     "import numpy as np\n",
     "from utils import *\n",
     "import build_synthetic_set as models\n",
@@ -27,7 +27,7 @@
     "from tqdm import tqdm\n",
     "import wotan\n",
     "import lightkurve as lk\n",
-    "import stella\n",
+    "#import stella\n",
     "import pandas as pd"
    ]
   },
@@ -36,7 +36,7 @@
    "id": "6f261392-86bb-4447-80ee-e387c780f622",
    "metadata": {},
    "source": [
-    "## TESS S28 lightcurves\n",
+    "## TESS S6 lightcurves\n",
     "- S28 is taken as random test sample.\n",
     "- 10-minute SPOC data.\n",
     "- Possibly we'll need to generate models for each sector to account for the sector-related noise properties?\n",
@@ -54,29 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "id": "b4deb35d-699d-44a7-8c13-2e3ee1386d28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "107973"
+       "617682"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files = glob('../data/s0028/**/*.fits', recursive=True)\n",
+    "files = glob('/storage/astro2/phrdhx/eleanor-lite-project-v2/s0006/*.fits', recursive=True)\n",
     "len(files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 5,
    "id": "64d89e67-313d-437a-ac74-347c6f2dbb06",
    "metadata": {
     "scrolled": true
@@ -85,22 +85,25 @@
     {
      "data": {
       "text/plain": [
-       "['../data/s0028/target/0000/0003/9452/1607/hlsp_tess-spoc_tess_phot_0000000394521607-s0028_tess_v1_lc.fits',\n",
-       " '../data/s0028/target/0000/0003/9452/1654/hlsp_tess-spoc_tess_phot_0000000394521654-s0028_tess_v1_lc.fits']"
+       "['/storage/astro2/phrdhx/eleanor-lite-project-v2/s0006/hlsp_gsfc-eleanor-lite_tess_ffi_s0006-0000000032546445_tess_v1.0_lc.fits',\n",
+       " '/storage/astro2/phrdhx/eleanor-lite-project-v2/s0006/hlsp_gsfc-eleanor-lite_tess_ffi_s0006-0000000124414653_tess_v1.0_lc.fits',\n",
+       " '/storage/astro2/phrdhx/eleanor-lite-project-v2/s0006/hlsp_gsfc-eleanor-lite_tess_ffi_s0006-0000000220613299_tess_v1.0_lc.fits',\n",
+       " '/storage/astro2/phrdhx/eleanor-lite-project-v2/s0006/hlsp_gsfc-eleanor-lite_tess_ffi_s0006-0000000234263243_tess_v1.0_lc.fits',\n",
+       " '/storage/astro2/phrdhx/eleanor-lite-project-v2/s0006/hlsp_gsfc-eleanor-lite_tess_ffi_s0006-0000000219424147_tess_v1.0_lc.fits']"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files[0:2]"
+    "files[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4c7d0c26-a0c6-45c0-aad6-fedd5d275f76",
    "metadata": {},
    "outputs": [
@@ -108,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 20000/20000 [11:35<00:00, 28.75it/s]\n"
+      "  8%|▊         | 1655/20000 [01:30<14:41, 20.80it/s]  "
      ]
     }
    ],
@@ -120,8 +123,8 @@
     "for i in tqdm(files[0:20000]):\n",
     "    try:\n",
     "        lc, info = import_lightcurve(i)\n",
-    "        tic = info['TICID']\n",
-    "        flat_flux = wotan.flatten(lc['TIME'], lc['SAP_FLUX'], method='median', window_length=1)\n",
+    "        tic = info['TIC_ID']\n",
+    "        flat_flux = wotan.flatten(lc['TIME'], lc['PCA_FLUX'], method='median', window_length=1)\n",
     "        rms = np.std(flat_flux)\n",
     "    \n",
     "        diff = np.diff(lc['TIME'])\n",
@@ -166,14 +169,14 @@
     "        model = 1 - models.comet_curve(lc['TIME'], A, t0)\n",
     "        flux = model * flat_flux\n",
     "        #flux = flux/np.nanmedian(lc['SAP_FLUX'])\n",
-    "        fluxerror = np.array(lc['SAP_FLUX_ERR'] / np.nanmedian(lc['SAP_FLUX']))\n",
+    "        fluxerror = np.array(lc['FLUX_ERR'] / np.nanmedian(lc['PCA_FLUX']))\n",
     "    \n",
     "        time = np.array(lc['TIME'])\n",
     "        flux = np.array(flux)\n",
     "        times.append(t0)\n",
     "        ticid.append(tic)\n",
     "    \n",
-    "        np.save(f\"../models/{info['TICID']}_sector28.npy\", np.array([time, flux, fluxerror]))\n",
+    "        np.save(f\"../models/{info['TIC_ID']}_sector6.npy\", np.array([time, flux, fluxerror]))\n",
     "        #np.save(f\"../models/{info['TICID']}_sector28-time.npy\", np.array([t0]))\n",
     "    except TypeError as e:\n",
     "        fails.append(i)\n",
@@ -1072,9 +1075,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nets",
+   "display_name": "nets2",
    "language": "python",
-   "name": "nets"
+   "name": "nets2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1086,7 +1089,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
