starting out my 3d grid of skew duration and snr

--- a/notebooks/create-binaries.ipynb
+++ b/notebooks/create-binaries.ipynb
@@ -227,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9276it [03:38, 42.47it/s]\n"
+      "9276it [02:43, 56.68it/s]\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9276it [00:01, 8352.64it/s] \n"
+      "9276it [00:00, 11415.66it/s]\n"
      ]
     }
    ],
@@ -389,7 +389,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████| 9271/9271 [00:03<00:00, 2928.95it/s]\n"
+      "100%|██████████████████████████████████████████| 9271/9271 [00:01<00:00, 7159.33it/s]\n"
      ]
     }
    ],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "bcb5bb76-27b8-40b2-b0c5-f6d0bb4a5b29",
    "metadata": {},
    "outputs": [],
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "d2c52592-9891-4032-8625-61e6cf9670ab",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "[3468 rows x 7 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,45 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "aca325b1-969f-4c42-bcb5-5ffa360c9428",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m\n",
-       "\u001b[0mimport_lightcurve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdrop_bad_points\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mreturn_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'astropy'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mreturn_meta_as_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Importing a lightcurve given a FITS format file.\n",
-       "\n",
-       "Parameters: \n",
-       "filepath (str): Path to the FITS file\n",
-       "drop_bad_points (bool): Whether to drop bad points or not\n",
-       "\n",
-       "Returns:\n",
-       "data (astropy.table.Table): Table containing the lightcurve data\n",
-       "meta (astropy.io.fits.header.Header): Header containing the metadata\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/Documents/open_source/nets2/scripts/utils.py\n",
-       "\u001b[0;31mType:\u001b[0m      function"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import_lightcurve?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "fccd15bc-b139-426c-ad59-a2160af24128",
    "metadata": {},
    "outputs": [],
@@ -816,22 +778,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "55ab81fe-b21c-4ba5-804e-ece7b3eb0584",
    "metadata": {},
    "outputs": [],
    "source": [
+    "folder = '../models/binaries-s7/'\n",
+    "os.makedirs(folder,exist_ok=True)\n",
     "for file_path in list(data2.filepath):\n",
     "    file_path = file_path.strip()  # Remove any leading/trailing whitespace\n",
     "    if os.path.isfile(file_path):\n",
-    "        shutil.copy(file_path, '../models/binaries-s7')\n",
+    "        shutil.copy(file_path, folder)\n",
     "    else:\n",
     "        print(f\"File does not exist: {file_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "e166fbc1-0c7a-438b-82b0-9bc4a4242e1e",
    "metadata": {},
    "outputs": [],
@@ -841,8 +805,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dfe499b2-bffa-4a43-80ed-d9ea87d693c9",
+   "metadata": {},
+   "source": [
+    "### Convert FITS to `npy`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "id": "7af47677-b3e6-4701-a98f-365dd650cf70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = glob('../models/binaries-s7/*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b22a08ff-bec9-45b4-ba6b-108bab912c84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in files:\n",
+    "    lc, lc_info = import_lightcurve(i)\n",
+    "    np.save(f\"{folder}/{lc_info['TIC_ID']}_sector07.npy\", np.array([lc['TIME'], lc['PCA_FLUX'] / np.nanmedian(lc['PCA_FLUX']), lc['FLUX_ERR'] / np.nanmedian(lc['PCA_FLUX'])]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "a31122a4-c6bd-45ea-9837-8e279cca40ca",
    "metadata": {},
    "outputs": [
@@ -857,7 +851,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████| 9266/9266 [00:06<00:00, 1417.42it/s]\n"
+      "100%|████████████████████████████████████████████| 231/231 [00:00<00:00, 1540.76it/s]"
      ]
     },
     {
@@ -865,14 +859,21 @@
      "output_type": "stream",
      "text": [
       "2600 positive classes\n",
-      "6110 negative classes\n",
-      "43.0% class imbalance\n",
+      "35 negative classes\n",
+      "7429.0% class imbalance\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n"
      ]
     }
    ],
    "source": [
-    "ds = stella.FlareDataSet(fn_dir='/Users/azib/Documents/open_source/nets2/models/binaries/',\n",
+    "ds = stella.FlareDataSet(fn_dir='/Users/azib/Documents/open_source/nets2/models/binaries-s7/',\n",
     "                         catalog='/Users/azib/Documents/open_source/nets2/notebooks/binaries-catalog-s7.txt',cadences=168,training=0.8,validation=0.1)"
    ]
   },
