--- a/notebooks/CNN.ipynb
+++ b/notebooks/CNN.ipynb
@@ -30,7 +30,8 @@
     "import glob\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "%load_ext tensorboard"
    ]
   },
   {
