more recovery plot updates but not yet finished

--- a/notebooks/CNN.ipynb
+++ b/notebooks/CNN.ipynb
@@ -51,24 +51,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 999/999 [00:00<00:00, 1482.07it/s]"
+      "100%|████████████████████████████| 999/999 [00:00<00:00, 1101.66it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "999 positive classes\n",
-      "1540 negative classes\n",
-      "65.0% class imbalance\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Number of positive class training data: 799\n",
+      "Number of negative class training data: 1232\n",
+      "Number of positive class validation data: 100\n",
+      "Number of negative class validation data: 154\n",
+      "Size of augmented data (training set only): 0\n",
+      "Class label (training): 0, Count: 1232\n",
+      "Class label (training): 1, Count: 799\n",
+      "Class label (validation): 0, Count: 154\n",
+      "Class label (validation): 1, Count: 100\n",
+      "Total size of training set: 2031\n",
+      "Total size of validation set: 254\n",
+      "Total size of test set: 254\n",
+      "Approximate class imbalance: 35.0\n"
      ]
     }
    ],
