--- a/notebooks/gaia2tic.ipynb
+++ b/notebooks/gaia2tic.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e748bfe7-ca31-4e84-a8cb-b5d5d7ed05e4",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█████▌                                                 | 1981/19544 [41:43<15:42:27,  3.22s/it]"
+      "100%|███████████████████████████████████████████████████████| 19544/19544 [5:18:04<00:00,  1.02it/s]\n"
      ]
     }
    ],
@@ -620,11 +620,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "id": "ebaf6c8e-5cf0-4364-9b59-cfe3f8843fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "import sys\n",
+    "sys.path.insert(1, '/Users/azib/Documents/open_source/nets2/stella/')\n",
+    "sys.path.insert(1, '/Users/azib/Documents/open_source/nets2/scripts/')\n",
+    "from utils import *\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "f9b20377-e253-4870-afc1-e99a316a3caf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.makedirs('../data/eleanor/cdips-lcs', exist_ok=True)\n",
+    "\n",
+    "# Loop through the dictionary and copy each file\n",
+    "for file_list in id_to_files.values():\n",
+    "    for file_name in file_list:\n",
+    "        file_name = os.path.join(\"../data/eleanor/s0007\",file_name)\n",
+    "        shutil.copy(file_name, '../data/eleanor/cdips-lcs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "30618776-a017-4601-804a-14d959d644a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████| 5000/5000 [01:26<00:00, 57.52it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "files2 = glob.glob('../data/eleanor/cdips-lcs/*.fits')\n",
+    "np.random.shuffle(files2)\n",
+    "\n",
+    "fo = '../models/cdips/'\n",
+    "os.makedirs(fo,exist_ok=True)\n",
+    "t0 = []\n",
+    "t2 = []\n",
+    "tic = []\n",
+    "for i in tqdm(files2[0:5000]):\n",
+    "    lc, info = import_lightcurve(i)\n",
+    "    t = lc['TIME']\n",
+    "    t0.append(t[0] + 5)\n",
+    "    t2.append(t[-1] - 5)\n",
+    "    tic.append(info['TIC_ID'])\n",
+    "    f = lc['PCA_FLUX']/np.nanmedian(lc['PCA_FLUX'])\n",
+    "    fe = lc['FLUX_ERR']\n",
+    "    np.save(f\"{fo}/{info['TIC_ID']}_sector07.npy\", np.array([t,f,fe]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ff292f-a29e-4c11-914f-ea8b4d5ba2cb",
+   "metadata": {},
+   "source": [
+    "### Creating a CDIPS stellar variability catalog\n",
+    "- Select a standard time (e.g: `t0 + 5`) and then make that the catalog.\n",
+    "- Then a second one from `t[-1] - 5`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "2f52ee6e-ec90-423c-b6e5-c3b48619b377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(data=[tic,t0]).T\n",
+    "data.columns = ['TIC','tpeak']\n",
+    "data.TIC = data.TIC.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "bc543bbd-c3ad-4f81-b2b7-5d31e009854f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('../catalogs/cdips.txt',index=None,sep=' ')"
+   ]
   }
  ],
  "metadata": {
