--- a/notebooks/CNN.ipynb
+++ b/notebooks/CNN.ipynb
@@ -3130,9 +3130,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nets2-metal",
+   "display_name": "nets2",
    "language": "python",
-   "name": "nets2-metal"
+   "name": "nets2"
   },
   "language_info": {
    "codemirror_mode": {
