moved threads to under predict only

--- a/notebooks/create-comets-eleanor.ipynb
+++ b/notebooks/create-comets-eleanor.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dc8aab2e-fa91-4d95-9bec-73caeccc77ed",
    "metadata": {
     "scrolled": true
@@ -195,9 +195,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 68%|████████████████████████████████████████████████████████████████████████████████▋                                     | 17094/25000 [09:31<03:53, 33.90it/s]/Users/azib/micromamba/envs/nets2/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1872: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
+      "  0%|▏                                                                                     | 397/250000 [00:11<1:59:45, 34.74it/s]/Users/azib/micromamba/envs/nets2/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1872: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
       "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 25000/25000 [13:36<00:00, 30.64it/s]\n"
+      "  4%|███▍                                                                                | 10151/250000 [05:23<1:59:59, 33.31it/s]"
      ]
     }
    ],
@@ -352,7 +352,7 @@
     "        # plt.close()\n",
     "\n",
     "        ### SAVE INTO NUMPY FOLDER\n",
-    "        np.save(f\"{folder}/{lc_info['TIC_ID']}_sector{sector}.npy\",np.array([time[real == 1], f[real == 1], fluxerror[real == 1], real[real == 1],model[real == 1]]))\n",
+    "        np.save(f\"{folder}/{lc_info['TIC_ID']}_sector{sector}_exocomet.npy\",np.array([time[real == 1], f[real == 1], fluxerror[real == 1], real[real == 1],model[real == 1]]))\n",
     "\n",
     "    except TypeError as e:\n",
     "        fails.append(i)\n",
@@ -362,21 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6031eed6-681d-4881-8dc8-b657b0210a74",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24998"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(amp)"
    ]
@@ -391,18 +380,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dda8f149-427c-495d-8bb5-87c6b889c9a5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comets25k-s18-snr5 saved.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.DataFrame(data=[ticid,times,snr,rms_cat]).T\n",
     "data.columns = ['TIC','tpeak','SNR','RMS']\n",
