creating some new models

--- a/notebooks/Results.ipynb
+++ b/notebooks/Results.ipynb
@@ -70,7 +70,39 @@
    "id": "b74fef83-dc9f-4aa6-93d3-6e191f427743",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_next_best_prediction(df):\n",
+    "    def get_arrays(row):\n",
+    "        time = np.array(row['time'])\n",
+    "        flux = np.array(row['flux'])\n",
+    "        pred = np.array(row['preds'])\n",
+    "        tpeak = row['tpred']  # Assuming 'time' column contains tpeak\n",
+    "\n",
+    "        # Create a mask to remove tpeak\n",
+    "        mask = time != tpeak\n",
+    "\n",
+    "        # Apply mask to all arrays\n",
+    "        time_filtered = time[mask]\n",
+    "        flux_filtered = flux[mask]\n",
+    "        pred_filtered = pred[mask]\n",
+    "\n",
+    "        # Find the index of the next highest prediction\n",
+    "        next_best_index = np.argmax(pred_filtered)\n",
+    "\n",
+    "        return pd.Series({\n",
+    "            'next_best_time': time_filtered[next_best_index],\n",
+    "            'next_best_flux': flux_filtered[next_best_index],\n",
+    "            'next_best_pred': pred_filtered[next_best_index]\n",
+    "        })\n",
+    "\n",
+    "    # Apply the function to each row\n",
+    "    result = df.apply(get_arrays, axis=1)\n",
+    "\n",
+    "    # Add the results to the original dataframe\n",
+    "    df[['next_best_time', 'next_best_flux', 'next_best_pred']] = result\n",
+    "\n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
