--- a/notebooks/create-comets-eleanor.ipynb
+++ b/notebooks/create-comets-eleanor.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'comets250k-s18-snr5'\n",
+    "name = 'comets63k-s18-snr5'\n",
     "folder = f'../models/{name}' "
    ]
   },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dc8aab2e-fa91-4d95-9bec-73caeccc77ed",
    "metadata": {
     "scrolled": true
@@ -195,9 +195,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|▏                                                                                     | 397/250000 [00:11<1:59:45, 34.74it/s]/Users/azib/micromamba/envs/nets2/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1872: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
+      " 15%|███████████████████████████▊                                                                                                                                                            | 9540/63000 [06:01<28:15, 31.53it/s]/Users/azib/micromamba/envs/nets2/lib/python3.8/site-packages/numpy/lib/nanfunctions.py:1872: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
       "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
-      "  4%|███▍                                                                                | 10151/250000 [05:23<1:59:59, 33.31it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 63000/63000 [34:27<00:00, 30.47it/s]\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
     "window_size = 84  # Number of cadences representing the window size (3.5 days)\n",
     "max_retries = 50  # Maximum number of retries for model creation\n",
     "\n",
-    "for i in tqdm(files[0:250000]):\n",
+    "for i in tqdm(files[0:63000]):\n",
     "    try:\n",
     "        ### READ IN LIGHTCURVE\n",
     "        lc, lc_info = import_lightcurve(i, drop_bad_points=True)\n",
@@ -362,10 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6031eed6-681d-4881-8dc8-b657b0210a74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62985"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(amp)"
    ]
@@ -380,10 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dda8f149-427c-495d-8bb5-87c6b889c9a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "comets63k-s18-snr5 saved.\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.DataFrame(data=[ticid,times,snr,rms_cat]).T\n",
     "data.columns = ['TIC','tpeak','SNR','RMS']\n",
@@ -396,12 +415,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "224c725d-954f-40f1-8204-1287ae52ce61",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading in training set files.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 249950/249950 [02:05<00:00, 1991.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of positive class training data: 66584\n",
+      "Number of negative class training data: 53202\n",
+      "Number of positive class validation data: 8323\n",
+      "Number of negative class validation data: 4986\n",
+      "Size of augmented data (training set only): 13316\n",
+      "Class label (training): 0.0, Count: 53202\n",
+      "Class label (training): 1.0, Count: 66584\n",
+      "Class label (validation): 0, Count: 4986\n",
+      "Class label (validation): 1, Count: 8323\n",
+      "Total size of training set: 119786\n",
+      "Total size of validation set: 13309\n",
+      "Total size of test set: 13309\n",
+      "Approximate class imbalance: -25.0\n"
+     ]
+    }
+   ],
    "source": [
     "ds = stella.FlareDataSet(fn_dir=f'/Users/azib/Documents/open_source/nets2/models/{name}/',\n",
     "                         catalog=f'/Users/azib/Documents/open_source/nets2/catalogs/{name}.txt',cadences=168,frac_balance=0.77,augment_portion=0.2)\n",
