changed training validation portions for merged dataset

--- a/notebooks/CNN.ipynb
+++ b/notebooks/CNN.ipynb
@@ -90,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█| 4999/4999 [00:"
+      "100%|█| 4999/4999 [00:01<00:00,"
      ]
     },
     {
@@ -138,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█| 4999/4999 [00:"
+      "100%|█| 4999/4999 [00:01<00:00,\n"
      ]
     },
     {
@@ -154,13 +154,6 @@
       "Class label (validation): None, Count: 1\n",
       "Total size of training set: 4999\n",
       "No second class to calculate imbalance.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -186,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█| 341/341 [00:00\n"
+      "100%|█| 341/341 [00:00<00:00, 1"
      ]
     },
     {
@@ -202,6 +195,13 @@
       "Class label (validation): None, Count: 1\n",
       "Total size of training set: 5104\n",
       "No second class to calculate imbalance.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█| 5000/5000 [00:"
+      "100%|█| 5000/5000 [00:01<00:00,"
      ]
     },
     {
@@ -275,7 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█| 49998/49998 [0\n"
+      "100%|█| 49998/49998 [00:12<00:0\n"
      ]
     },
     {
@@ -283,29 +283,39 @@
      "output_type": "stream",
      "text": [
       "Number of positive class training data: 39998\n",
-      "Number of negative class training data: 39471\n",
+      "Number of negative class training data: 40510\n",
       "Number of positive class validation data: 5000\n",
-      "Number of negative class validation data: 4934\n",
+      "Number of negative class validation data: 5064\n",
       "Size of augmented data (training set only): 0\n",
-      "Class label (training): 0, Count: 39471\n",
+      "Class label (training): 0, Count: 40510\n",
       "Class label (training): 1, Count: 39998\n",
-      "Class label (validation): 0, Count: 2598\n",
+      "Class label (validation): 0, Count: 2727\n",
       "Class label (validation): 1, Count: 5000\n",
       "Class label (validation): 2, Count: 500\n",
       "Class label (validation): 3, Count: 500\n",
-      "Class label (validation): 4, Count: 510\n",
+      "Class label (validation): 4, Count: 511\n",
       "Class label (validation): 5, Count: 826\n",
-      "Total size of training set: 79469\n",
-      "Total size of validation set: 9934\n",
-      "Total size of test set: 9934\n",
-      "Approximate class imbalance: -1.0\n"
+      "Total size of training set: 80508\n",
+      "Total size of validation set: 10064\n",
+      "Total size of test set: 10064\n",
+      "Approximate class imbalance: 1.0\n"
      ]
     }
    ],
    "source": [
     "ds = stella.FlareDataSet(fn_dir='/Users/azib/Documents/open_source/nets2/models/comets50k-scaled-to-baseline/',\n",
-    "                         catalog='/Users/azib/Documents/open_source/nets2/catalogs/comets50k-scaled-to-baseline.txt',cadences=cadences,frac_balance=0.8,\n",
+    "                         catalog='/Users/azib/Documents/open_source/nets2/catalogs/comets50k-scaled-to-baseline.txt',cadences=cadences,frac_balance=0.79,\n",
     "                         merge_datasets=True,other_datasets=[exoplanets,fbinaries,rbinaries,sines],other_datasets_labels=[2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6b0ff131-a624-488a-ade4-e0bab5afdf77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.save(output='../ds.pkl')"
    ]
   },
   {
